[package]
name = "meealgi"
version = "0.0.6"
authors = ["Liam Dawson <liam@liamdawson.me>"]
license = "Apache-2.0/MIT"
description = "A selective implementation of Jean Meeus' astronomical algorithms."
homepage = "https://github.com/liamdawson/meealgi"
repository = "https://github.com/liamdawson/meealgi.git"
readme = "README.md"

[dependencies]
chrono = "~0.4"
clippy = { version = "~0.0", optional = true }

[dev-dependencies]
spectral = "0.6.0"

[features]
default = []
